--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "process": "^0.11.10",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4",
-    "process": "^0.11.10"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
